# ollama-hub-mcp-server

./: .gitignore  AppleScript.md  DIFFUSION_GEMMA_INTEGRATION_GUIDE.md  README.md  SUMMARY_INTEGRATION.md  sync-skills.sh
code-hub/: index.ts  package-lock.json  package.json
diffusion/: End of Walkthrough.md  MODEL_GUIDE.md
diffusion/engine-mlx/: smart_diffusion_server.py
gemini-proxy/: README.md  list-models.js  package-lock.json  package.json  proxy.js
image/: MODEL_GUIDE.md
image/Dolphin-Local-Perception-Hub/: .gitignore  README.md  pyproject.toml  (+1 more)
image/kimi-2-seg/: .gitignore  propuest_web.html  pyproject.toml  requirements.txt
image/kimi-2-seg/docs/: README-4.md  README-5.md  paper_text.txt  prompt_maestro_ui.md  web_ui_foundation.md
image/kimi-2-seg/server/: README.md  config.yaml  inference.py  model_loader.py  server.py  session_manager.py  shutdown_manager.py
mcp-chuk/: lazarus_smart_client.py
musica/: README.md  applescript_engine.py  com.music-mcp.server.plist  merge_playlists.py  organize_library.py  pyproject.toml  server.py
scripts/: chat_client.py  debug_request_server.py  direct_ollama_verify.py  emergency_stop.sh  monitor_resources.sh  start_diffusion_server.sh  start_fastcontext_server.sh  start_image_server.sh  start_locate_server.sh  start_text_server.sh  verify_client_output.py
search-hub/: index.ts  package-lock.json  package.json
skills/: a11y-debugging  chrome-devtools  chrome-extensions  debug-optimize-lcp  google-antigravity-sdk  memory-leak-debugging  modern-web-guidance  troubleshooting
text/: MODEL_GUIDE.md
(+69 files in other folders)
